antes de viajar

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         <div class="profile">
           <img class="perfil" src="images/perfil-removebg.png" alt="perfil-img">
           <h2>Hello.</h2>
-          <p>Welcome to my portfolio, enojoy your visit and plase let know if you have any questions. Keep in touch.</p>
+          <p class="hello-description">Welcome to my portfolio, enjoy your visit and please let me know if you have any questions. Keep in touch.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="skill-image" src="https://cdn-icons-png.flaticon.com/512/738/738497.png" alt="HTML">
+            <img class="html-image" src="https://cdn-icons-png.flaticon.com/512/738/738497.png" alt="HTML">
             <h3>HTML</h3>
-            <p>I have the base to become a web developer.</p>
+            <p class="html-description">I have the base to become a web developer.</p>
           </div>
           <div class="skill-row">
-            <img class="skill-image" id="css-image" src="https://cdn-icons-png.flaticon.com/512/136/136445.png" alt="CSS">
+            <img class="css-image" src="https://cdn-icons-png.flaticon.com/512/136/136445.png" alt="CSS">
             <h3>CSS</h3>
-            <p>I'm on my way learning to give style to my websites.</p>
+            <p class="css-description">I'm on my way learning to give style to my websites.</p>
           </div>
         </div>
         <hr>
@@ -54,7 +54,7 @@
         <a class="footer-link" href="https://github.com/DanteCarrasco/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Dante Carrasco.</p>
+        <p class="footer-text">© Dante Carrasco.</p>
       </div>
 </body>
 
